# plato

./: README.md  menu_items.json  pyproject.toml
src/: doordash_scraper.py  generate_script.py
